Improve findAllWithTags tests